Fixed excess whitespace in site's footer

--- a/static/css/partials/_footer.scss
+++ b/static/css/partials/_footer.scss
@@ -10,4 +10,8 @@
 
   text-align: center;
   color: #ffffff;
+
+  > p {
+    margin-bottom: 0;
+  }
 }
